--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
-  - "0.10"
-  - 2
-  - 3
-  - 4
-  - 5
+  - "8"
+  - "7"
+  - "6"
+  - "5"
+  - "4"
+  - "0.12"
 branches:
   only:
     - master
@@ -16,7 +17,7 @@ notifications:
     - raynos2@gmail.com
     - dominic.tarr@gmail.com
     - max@maxogden.com
-    - lars.magnus.skog@gmail.com
+    - ralphtheninja@riseup.net
     - david.bjorklund@gmail.com
     - julian@juliangruber.com
     - paolo@async.ly
