--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "xtend": "^4.0.0"
   },
   "devDependencies": {
-    "tape": "*",
-    "level": "*",
-    "after": "*",
-    "rimraf": "*"
+    "after": "^0.8.2",
+    "level": "^4.0.0",
+    "rimraf": "^2.6.2",
+    "tape": "^4.9.0"
   },
   "scripts": {
     "test": "node test.js"
