--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "main": "level-ws.js",
   "dependencies": {
+    "inherits": "^2.0.3",
     "readable-stream": "^2.2.8",
     "xtend": "^4.0.0"
   },
