--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "after": "^0.8.2",
     "level": "^4.0.0",
     "rimraf": "^2.6.2",
+    "standard": "^11.0.1",
     "tape": "^4.9.0"
   },
   "scripts": {
-    "test": "node test.js"
+    "test": "standard && node test.js"
   },
   "license": "MIT"
 }
