--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "tape": "^4.9.0"
   },
   "scripts": {
-    "test": "standard && node test.js"
+    "test": "node test.js"
   },
   "license": "MIT"
 }
