--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "after": "^0.8.2",
     "level": "^4.0.0",
+    "level-concat-iterator": "^2.0.0",
     "rimraf": "^2.6.2",
     "standard": "^11.0.1",
     "tape": "^4.9.0"
