Update README style

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "scripts": {
     "test": "standard && node test.js"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=6"
+  }
 }
