--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ node_js:
   - 8
   - 9
   - 10
+
+after_success: npm run coverage
+
+notifications:
+  # Merge results of parallel builds
+  webhooks: https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN
