--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   },
   "devDependencies": {
     "after": "^0.8.2",
+    "coveralls": "~3.0.1",
     "level": "^4.0.0",
     "level-concat-iterator": "^2.0.0",
+    "nyc": "~12.0.2",
     "rimraf": "^2.6.2",
     "standard": "^11.0.1",
     "tape": "^4.9.0"
   },
   "scripts": {
-    "test": "standard && node test.js"
+    "test": "standard && nyc node test.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "license": "MIT",
   "engines": {
