--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "level-concat-iterator": "^2.0.0",
     "nyc": "~12.0.2",
     "rimraf": "^2.6.2",
+    "secret-event-listener": "~1.0.0",
     "standard": "^11.0.1",
     "tape": "^4.9.0"
   },
