--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
     "xtend": "^4.0.1"
   },
   "devDependencies": {
-    "after": "^0.8.2",
     "coveralls": "~3.0.1",
     "level": "^4.0.0",
     "level-concat-iterator": "^2.0.0",
     "nyc": "~12.0.2",
-    "rimraf": "^2.6.2",
     "secret-event-listener": "~1.0.0",
     "standard": "^11.0.1",
-    "tape": "^4.9.0"
+    "tape": "^4.9.0",
+    "tempy": "^0.2.1"
   },
   "scripts": {
     "test": "standard && nyc node test.js",
