--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "coveralls": "~3.0.1",
+    "hallmark": "^0.1.0",
     "level": "^4.0.0",
     "level-concat-iterator": "^2.0.0",
     "nyc": "~12.0.2",
