--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "xtend": "^4.0.1"
   },
   "devDependencies": {
-    "coveralls": "~3.0.1",
+    "coveralls": "^3.0.1",
     "dependency-check": "^3.3.0",
     "hallmark": "^0.1.0",
     "level": "^4.0.0",
     "level-community": "^3.0.0",
     "level-concat-iterator": "^2.0.0",
-    "nyc": "~12.0.2",
-    "secret-event-listener": "~1.0.0",
+    "nyc": "^12.0.2",
+    "secret-event-listener": "^1.0.0",
     "standard": "^12.0.0",
     "tape": "^4.9.0",
     "tempy": "^0.2.1"
