--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "standard && hallmark && nyc node test.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "hallmark": "hallmark --fix"
+    "hallmark": "hallmark --fix",
+    "dependency-check": "dependency-check . test.js",
+    "prepublishOnly": "npm run dependency-check"
   },
   "dependencies": {
     "inherits": "^2.0.3",
@@ -15,13 +17,14 @@
     "xtend": "^4.0.1"
   },
   "devDependencies": {
-    "coveralls": "~3.0.1",
+    "coveralls": "^3.0.1",
+    "dependency-check": "^3.3.0",
     "hallmark": "^0.1.0",
     "level": "^4.0.0",
     "level-community": "^3.0.0",
     "level-concat-iterator": "^2.0.0",
-    "nyc": "~12.0.2",
-    "secret-event-listener": "~1.0.0",
+    "nyc": "^12.0.2",
+    "secret-event-listener": "^1.0.0",
     "standard": "^12.0.0",
     "tape": "^4.9.0",
     "tempy": "^0.2.1"
