--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,26 +5,21 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [6, 8, 10]
+        node: [10, 12, 14, 16]
     name: Node ${{ matrix.node }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
       - name: Use node ${{ matrix.node }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-
       - name: Install
         run: npm install
-
       - name: Test
         run: npm test
-
       - name: Coverage
         run: npm run coverage
-
       - name: Codecov
         uses: codecov/codecov-action@v1
         with:
