--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "dependency-check": "dependency-check . test.js",
     "prepublishOnly": "npm run dependency-check"
   },
+  "files": [
+    "level-ws.js",
+    "CHANGELOG.md",
+    "UPGRADING.md"
+  ],
   "dependencies": {
     "inherits": "^2.0.3",
     "readable-stream": "^3.1.0",
@@ -20,19 +25,12 @@
     "dependency-check": "^3.3.0",
     "hallmark": "^3.1.0",
     "level": "^7.0.0",
-    "level-community": "^3.0.0",
     "level-concat-iterator": "^3.0.0",
     "nyc": "^15.1.0",
     "secret-event-listener": "^1.0.0",
     "standard": "^16.0.3",
     "tape": "^5.0.1",
     "tempy": "^1.0.1"
-  },
-  "hallmark": {
-    "community": "level-community",
-    "ignore": [
-      "CONTRIBUTORS.md"
-    ]
   },
   "repository": {
     "type": "git",
