--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   ],
   "dependencies": {
     "inherits": "^2.0.3",
-    "readable-stream": "^3.1.0",
-    "xtend": "^4.0.1"
+    "readable-stream": "^3.1.0"
   },
   "devDependencies": {
     "dependency-check": "^3.3.0",
