--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [10, 12, 14, 16]
+        # Node.js 10 is still supported by level-ws, but not by its devDependencies
+        node: [12, 14, 16]
     name: Node ${{ matrix.node }}
     steps:
       - name: Checkout
