--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "main": "level-ws.js",
   "scripts": {
     "test": "standard && hallmark && nyc node test.js",
-    "coverage": "nyc report -r lcovonly",
-    "hallmark": "hallmark --fix",
-    "dependency-check": "dependency-check . test.js",
-    "prepublishOnly": "npm run dependency-check"
+    "coverage": "nyc report -r lcovonly"
   },
   "files": [
     "level-ws.js",
@@ -21,8 +18,7 @@
     "readable-stream": "^3.1.0"
   },
   "devDependencies": {
-    "dependency-check": "^3.3.0",
-    "hallmark": "^3.1.0",
+    "hallmark": "^4.1.0",
     "level": "^8.0.0",
     "nyc": "^15.1.0",
     "secret-event-listener": "^1.0.0",
