--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # Node.js 10 is still supported by level-ws, but not by its devDependencies
-        node: [12, 14, 16]
+        node: [12, 14, 16, 18]
     name: Node ${{ matrix.node }}
     steps:
       - name: Checkout
